# angular

./: .bazelignore  .dev-infra.json  .ng-dev-infra-config.json  CHANGELOG.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.aspect/rules/external_repository_action_cache/: npm_translate_lock_MzA5NzUwNzMx
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml
.github/workflows/: adev-preview-build.yml  ci.yml  pr.yml
.ng-dev/: caretaker.ts  config.ts  github.ts  release.ts
adev/: package.json
adev/content/best-practices/: BUILD.bazel  a11y.md  style-guide.md
adev/content/ecosystem/service-workers/: BUILD.bazel  communications.md
adev/content/examples/styleguide/src/app/: app.module.ts
adev/content/guide/: BUILD.bazel  elements.md  security.md  ssr.md
adev/content/guide/animations/: BUILD.bazel  complex-sequences.md  overview.md  reusable-animations.md  route-animations.md  transition-and-triggers.md
adev/content/guide/di/: BUILD.bazel  hierarchical-dependency-injection.md
adev/content/guide/directives/: BUILD.bazel  attribute-directives.md  overview.md
adev/content/guide/forms/: BUILD.bazel  dynamic-forms.md  form-validation.md  overview.md  reactive-forms.md  template-driven-forms.md
adev/content/guide/i18n/: BUILD.bazel  add-package.md  deploy.md  example.md  import-global-variants.md  manage-marked-text.md  merge.md  prepare.md  translation-files.md
adev/content/guide/pipes/: BUILD.bazel  change-detection.md  transform-data.md  unwrapping-data-observables.md
adev/content/guide/routing/: BUILD.bazel  common-router-tasks.md  router-reference.md  router-tutorial.md  routing-with-urlmatcher.md
adev/content/guide/templates/: BUILD.bazel  attribute-binding.md  binding.md  class-binding.md  event-binding.md  interpolation.md  property-binding-best-practices.md  property-binding.md  reference-variables.md  svg-in-templates.md  template-statements.md  two-way-binding.md
adev/content/guide/testing/: BUILD.bazel  attribute-directives.md  components-basics.md  components-scenarios.md  pipes.md  services.md  utility-apis.md
adev/content/reference/configs/: BUILD.bazel  angular-compiler-options.md
adev/content/reference/errors/: BUILD.bazel  NG3003.md
adev/content/tools/cli/: BUILD.bazel  cli-builder.md  schematics-for-libraries.md
adev/content/tools/libraries/: BUILD.bazel  creating-libraries.md
adev/content/tutorials/first-app/steps/01-hello-world/: README.md
adev/content/tutorials/first-app/steps/02-HomeComponent/: README.md
adev/content/tutorials/first-app/steps/03-HousingLocation/: README.md
adev/content/tutorials/first-app/steps/04-interfaces/: README.md
adev/content/tutorials/first-app/steps/05-inputs/: README.md
adev/shared-docs/: BUILD.bazel  index.bzl  package.json
adev/shared-docs/components/copy-source-code-button/: BUILD.bazel
adev/shared-docs/components/navigation-list/: BUILD.bazel
adev/shared-docs/components/search-dialog/: BUILD.bazel
adev/shared-docs/components/search-history/: BUILD.bazel
adev/shared-docs/components/viewers/: BUILD.bazel
adev/shared-docs/directives/search-item/: BUILD.bazel
adev/shared-docs/pipeline/api-gen/extraction/: BUILD.bazel  index.mts
adev/shared-docs/pipeline/api-gen/extraction/test/: BUILD.bazel
adev/shared-docs/pipeline/api-gen/manifest/: BUILD.bazel
adev/shared-docs/pipeline/api-gen/rendering/: BUILD.bazel  index.mts  processing.mts
adev/shared-docs/pipeline/api-gen/rendering/test/: BUILD.bazel  cli.spec.mts  marked.spec.mts  renderable.spec.mts
adev/shared-docs/pipeline/examples/previews/: BUILD.bazel
adev/shared-docs/pipeline/examples/stackblitz/: BUILD.bazel
adev/shared-docs/pipeline/examples/zip/: BUILD.bazel
adev/shared-docs/pipeline/guides/: BUILD.bazel
adev/shared-docs/pipeline/guides/testing/: BUILD.bazel  bootstrap.init.mts
adev/shared-docs/pipeline/guides/testing/mermaid/: BUILD.bazel
adev/shared-docs/pipeline/navigation/: BUILD.bazel
adev/shared-docs/pipeline/navigation/test/: BUILD.bazel
adev/shared-docs/pipeline/tutorials/: BUILD.bazel  metadata.mts
adev/shared-docs/utils/: BUILD.bazel
adev/src/app/editor/code-editor/: code-editor.component.spec.ts
adev/src/assets/: BUILD.bazel
adev/src/content/guide/animations/: complex-sequences.md  css.md  migration.md  overview.md  reusable-animations.md  transition-and-triggers.md
aio/: package.json
aio/content/guide/: accessibility.md
aio/tools/examples/shared/: package.json
dev-infra/: BUILD.bazel  cli.ts  ng-dev.js  tmpl-package.json
dev-infra/caretaker/: BUILD.bazel  config.ts
dev-infra/caretaker/check/: BUILD.bazel  base.ts  check.ts  ci.ts  g3.ts  github.ts
dev-infra/commit-message/: validate.spec.ts  validate.ts
dev-infra/format/formatters/: prettier.ts
dev-infra/misc/: BUILD.bazel  cli.ts
dev-infra/misc/yarn-update/: cli.ts
dev-infra/pr/: BUILD.bazel  check-rebase.ts  cli.ts  discover-new-conflicts.ts
dev-infra/pr/amend-commit/: cli.ts  fixup-commits.ts
dev-infra/pr/check-target-branches/: check-target-branches.ts
dev-infra/pr/common/: checkout-upstream-pr.ts
dev-infra/pr/info-section/: BUILD.bazel  cli.ts  info-section.ts
dev-infra/pr/merge/: config.ts  index.ts
dev-infra/release/: BUILD.bazel
dev-infra/release/config/: BUILD.bazel  index.ts  utils.ts
dev-infra/release/publish/: actions.ts  graphql-queries.ts  pull-request-state.ts
dev-infra/release/publish/tasks/: test.ts  version-and-changelog-update.ts
dev-infra/release/stamping/: cli.ts  env-stamp.ts
dev-infra/utils/: config.ts  console.ts  git.ts  github.ts  ng-info-section.ts
dev-infra/utils/git/: index.ts
tools/: defaults.bzl  defaults2.bzl
tools/bazel/: ts_project_interop.bzl  web_test.bzl
tools/bazel-runner/: bazel.ts  parse-execution-log-file.ts
tools/dev-infra/: config.ts
tools/esm-interop/patches/npm/: @angular+build-tooling+0.0.0-d30a56c19bafaac67cf44e605ed8c2c0e45b0a51.patch
vscode-ng-language-service/: package.json
vscode-ng-language-service/integration/project/: package.json
vscode-ng-language-service/server/: package.json
(+30 files in other folders)
