load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "caretaker",
    srcs = glob(["*.ts"]),
    module_name = "@angular/dev-infra-private/caretaker",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/caretaker/service-statuses",
        "@npm//@types/yargs",
        "@npm//yargs",
    ],
)
