load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "pr",
    srcs = glob([
        "*.ts",
    ]),
    module_name = "@angular/dev-infra-private/pr",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "@npm//@types/node",
        "@npm//@types/shelljs",
        "@npm//@types/yargs",
        "@npm//shelljs",
        "@npm//yargs",
    ],
)
