load("@npm//@angular/docs:index.bzl", "generate_guides")

generate_guides(
    name = "best-practices",
    srcs = glob([
        "*.md",
    ]),
    data = [
        "//adev/content/examples/accessibility:src/app/app.component.html",
        "//adev/content/examples/accessibility:src/app/app.component.ts",
        "//adev/content/examples/accessibility:src/app/progress-bar.component.ts",
        "//adev/content/examples/dependency-injection:src/app/tree-shaking/service.ts",
        "//adev/content/examples/styleguide:src/01-01/app/app.component.ts",
        "//adev/content/examples/styleguide:src/01-01/app/app.module.ts",
        "//adev/content/examples/styleguide:src/01-01/app/heroes/hero.component.avoid.ts",
        "//adev/content/examples/styleguide:src/01-01/app/heroes/heroes.component.ts",
        "//adev/content/examples/styleguide:src/01-01/app/heroes/shared/hero.model.ts",
        "//adev/content/examples/styleguide:src/01-01/app/heroes/shared/hero.service.ts",
        "//adev/content/examples/styleguide:src/01-01/app/heroes/shared/mock-heroes.ts",
        "//adev/content/examples/styleguide:src/01-01/main.ts",
        "//adev/content/examples/styleguide:src/02-05/main.ts",
        "//adev/content/examples/styleguide:src/02-07/app/heroes/hero.component.avoid.ts",
        "//adev/content/examples/styleguide:src/02-07/app/heroes/hero.component.ts",
        "//adev/content/examples/styleguide:src/02-07/app/users/users.component.avoid.ts",
        "//adev/content/examples/styleguide:src/02-07/app/users/users.component.ts",
        "//adev/content/examples/styleguide:src/02-08/app/shared/validate.directive.avoid.ts",
        "//adev/content/examples/styleguide:src/02-08/app/shared/validate.directive.ts",
        "//adev/content/examples/styleguide:src/04-08/app/app.module.ts",
        "//adev/content/examples/styleguide:src/04-10/app/heroes/heroes.component.html",
        "//adev/content/examples/styleguide:src/04-10/app/heroes/heroes.component.ts",
        "//adev/content/examples/styleguide:src/04-10/app/shared/filter-text/filter-text.component.ts",
        "//adev/content/examples/styleguide:src/04-10/app/shared/filter-text/filter-text.service.ts",
        "//adev/content/examples/styleguide:src/04-10/app/shared/init-caps.pipe.ts",
        "//adev/content/examples/styleguide:src/04-10/app/shared/shared.module.ts",
        "//adev/content/examples/styleguide:src/05-02/app/app.component.html",
        "//adev/content/examples/styleguide:src/05-02/app/heroes/shared/hero-button/hero-button.component.avoid.ts",
        "//adev/content/examples/styleguide:src/05-02/app/heroes/shared/hero-button/hero-button.component.ts",
        "//adev/content/examples/styleguide:src/05-03/app/app.component.avoid.html",
        "//adev/content/examples/styleguide:src/05-03/app/app.component.html",
        "//adev/content/examples/styleguide:src/05-03/app/heroes/shared/hero-button/hero-button.component.avoid.ts",
        "//adev/content/examples/styleguide:src/05-03/app/heroes/shared/hero-button/hero-button.component.ts",
        "//adev/content/examples/styleguide:src/05-04/app/heroes/heroes.component.avoid.ts",
        "//adev/content/examples/styleguide:src/05-04/app/heroes/heroes.component.css",
        "//adev/content/examples/styleguide:src/05-04/app/heroes/heroes.component.html",
        "//adev/content/examples/styleguide:src/05-04/app/heroes/heroes.component.ts",
        "//adev/content/examples/styleguide:src/05-12/app/heroes/shared/hero-button/hero-button.component.avoid.ts",
        "//adev/content/examples/styleguide:src/05-12/app/heroes/shared/hero-button/hero-button.component.ts",
        "//adev/content/examples/styleguide:src/05-13/app/app.component.avoid.html",
        "//adev/content/examples/styleguide:src/05-13/app/app.component.html",
        "//adev/content/examples/styleguide:src/05-13/app/heroes/shared/hero-button/hero-button.component.avoid.ts",
        "//adev/content/examples/styleguide:src/05-13/app/heroes/shared/hero-button/hero-button.component.ts",
        "//adev/content/examples/styleguide:src/05-13/app/heroes/shared/hero-highlight.directive.ts",
        "//adev/content/examples/styleguide:src/05-15/app/heroes/hero-list/hero-list.component.avoid.ts",
        "//adev/content/examples/styleguide:src/05-15/app/heroes/hero-list/hero-list.component.ts",
        "//adev/content/examples/styleguide:src/05-16/app/app.component.avoid.html",
        "//adev/content/examples/styleguide:src/05-16/app/app.component.html",
        "//adev/content/examples/styleguide:src/05-16/app/heroes/hero.component.avoid.ts",
        "//adev/content/examples/styleguide:src/05-16/app/heroes/hero.component.ts",
        "//adev/content/examples/styleguide:src/05-17/app/heroes/hero-list/hero-list.component.avoid.ts",
        "//adev/content/examples/styleguide:src/05-17/app/heroes/hero-list/hero-list.component.ts",
        "//adev/content/examples/styleguide:src/05-18/app/heroes/hero/hero.component.avoid.ts",
        "//adev/content/examples/styleguide:src/05-18/app/heroes/hero/hero.component.optional.ts",
        "//adev/content/examples/styleguide:src/05-18/app/heroes/hero/hero.component.ts",
        "//adev/content/examples/styleguide:src/06-01/app/app.component.html",
        "//adev/content/examples/styleguide:src/06-01/app/shared/highlight.directive.ts",
        "//adev/content/examples/styleguide:src/06-03/app/shared/validator.directive.ts",
        "//adev/content/examples/styleguide:src/06-03/app/shared/validator2.directive.ts",
        "//adev/content/examples/styleguide:src/07-01/app/heroes/shared/hero.service.ts",
        "//adev/content/examples/styleguide:src/07-04/app/heroes/shared/hero-arena.service.avoid.ts",
        "//adev/content/examples/styleguide:src/07-04/app/heroes/shared/hero-arena.service.ts",
        "//adev/content/examples/styleguide:src/09-01/app/heroes/shared/hero-button/hero-button.component.avoid.ts",
        "//adev/content/examples/styleguide:src/09-01/app/heroes/shared/hero-button/hero-button.component.ts",
        "//adev/src/assets/images:components.svg",
    ],
    visibility = ["//adev:__subpackages__"],
)
