load("//tools:defaults2.bzl", "ts_project")

package(default_visibility = ["//visibility:private"])

#ts_project(
#    name = "utils",
#    srcs = [
#        "index.ts",
#    ],
#    visibility = ["//adev/shared-docs:__subpackages__"],
#    tsconfig = "//adev/shared-docs:tsconfig_test",
#    deps = [
#        ":lib_rjs",
#    ],
#)

ts_project(
    name = "utils",
    srcs = glob(
        [
            "**/*.ts",
        ],
        exclude = [
            #"index.ts",
            "**/*.spec.ts",
        ],
    ),
    interop_deps = [
        "//adev/shared-docs/interfaces",
        "//adev/shared-docs/providers",
        "//packages/core",
        "//packages/router",
    ],
    tsconfig = "//adev/shared-docs:tsconfig_test",
    visibility = ["//adev/shared-docs:__subpackages__"],
    deps = [
        "//:node_modules/fflate",
    ],
)
