load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")

package(default_visibility = ["//adev:__subpackages__"])

copy_to_directory(
    name = "content",
    srcs = [
        "//adev/content/best-practices",
        "//adev/content/best-practices/runtime-performance",
        "//adev/content/ecosystem",
        "//adev/content/ecosystem/service-workers",
        "//adev/content/guide",
        "//adev/content/guide/animations",
        "//adev/content/guide/components",
        "//adev/content/guide/di",
        "//adev/content/guide/directives",
        "//adev/content/guide/forms",
        "//adev/content/guide/http",
        "//adev/content/guide/i18n",
        "//adev/content/guide/ngmodules",
        "//adev/content/guide/pipes",
        "//adev/content/guide/routing",
        "//adev/content/guide/signals",
        "//adev/content/guide/templates",
        "//adev/content/guide/testing",
        "//adev/content/introduction",
        "//adev/content/introduction/essentials",
        "//adev/content/reference",
        "//adev/content/reference/configs",
        "//adev/content/reference/errors",
        "//adev/content/reference/extended-diagnostics",
        "//adev/content/reference/migrations",
        "//adev/content/tools",
        "//adev/content/tools/cli",
        "//adev/content/tools/libraries",
        "//adev/content/tutorials",
        "//adev/content/tutorials/first-app:first-app-guides",
        "//adev/content/tutorials/learn-angular:learn-angular-guides",
        "//packages/animations:animations_docs",
        "//packages/animations/browser:animations_browser_docs",
        "//packages/animations/browser/testing:animations_browser_testing_docs",
        "//packages/common:common_docs",
        "//packages/common/http:http_docs",
        "//packages/common/http/testing:http_testing_docs",
        "//packages/common/testing:common_testing_docs",
        "//packages/common/upgrade:common_upgrade_docs",
        "//packages/core:core_docs",
        "//packages/core/rxjs-interop:core_rxjs-interop_docs",
        "//packages/core/testing:core_testing_docs",
        "//packages/elements:elements_docs",
        "//packages/forms:forms_docs",
        "//packages/localize:localize_docs",
        "//packages/platform-browser:platform-browser_docs",
        "//packages/platform-browser-dynamic:platform-browser_dynamic_docs",
        "//packages/platform-browser-dynamic/testing:platform-browser_dynamic_testing_docs",
        "//packages/platform-browser/animations:platform-browser_animations_docs",
        "//packages/platform-browser/animations/async:platform-browser_animations_async_docs",
        "//packages/platform-browser/testing:platform-browser_testing_docs",
        "//packages/platform-server:platform-server_docs",
        "//packages/platform-server/testing:platform-server_testing_docs",
        "//packages/router:router_docs",
        "//packages/router/testing:router_testing_docs",
        "//packages/router/upgrade:router_upgrade_docs",
        "//packages/service-worker:service-worker_docs",
        "//packages/upgrade:upgrade_docs",
        "//packages/upgrade/static:upgrade_static_docs",
        "//packages/upgrade/static/testing:upgrade_static_testing_docs",
    ],
    replace_prefixes = {
        "adev/content": "",
        "packages/**/": "api/",
    },
)

copy_to_directory(
    name = "tutorials",
    srcs = [
        "//adev/content/tutorials/first-app",
        "//adev/content/tutorials/homepage",
        "//adev/content/tutorials/learn-angular",
        "//adev/content/tutorials/playground",
    ],
    replace_prefixes = {
        "adev/**/tutorials/*/": "",
    },
)

copy_to_directory(
    name = "api",
    srcs = [
        "//packages:docs_api_manifest",
    ],
    replace_prefixes = {
        "**/": "",
    },
)
