load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "service-statuses",
    srcs = glob(["*.ts"]),
    module_name = "@angular/dev-infra-private/caretaker/service-statuses",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils",
        "@npm//@types/node-fetch",
        "@npm//@types/yargs",
        "@npm//node-fetch",
        "@npm//yargs",
    ],
)
