load("@npm//@angular/docs:index.bzl", "generate_guides")

generate_guides(
    name = "di",
    srcs = glob([
        "*.md",
    ]),
    data = [
        "//adev/src/assets/images:dependency_injection.svg",
        "//adev/content/examples/resolution-modifiers:src/app/self/self.component.ts",
    ],
    visibility = ["//adev:__subpackages__"],
)
