load("@npm//@angular/docs:index.bzl", "generate_guides")

generate_guides(
    name = "directives",
    srcs = glob([
        "*.md",
    ]),
    data = [
        "//adev/content/examples/attribute-directives:src/app/app.component.1.html",
        "//adev/content/examples/attribute-directives:src/app/app.component.1.ts",
        "//adev/content/examples/attribute-directives:src/app/app.component.avoid.html",
        "//adev/content/examples/attribute-directives:src/app/app.component.html",
        "//adev/content/examples/attribute-directives:src/app/app.component.ts",
        "//adev/content/examples/attribute-directives:src/app/highlight.directive.0.ts",
        "//adev/content/examples/attribute-directives:src/app/highlight.directive.1.ts",
        "//adev/content/examples/attribute-directives:src/app/highlight.directive.2.ts",
        "//adev/content/examples/attribute-directives:src/app/highlight.directive.3.ts",
        "//adev/content/examples/attribute-directives:src/app/highlight.directive.ts",
        "//adev/content/examples/built-in-directives:src/app/app.component.html",
        "//adev/content/examples/built-in-directives:src/app/app.component.ts",
        "//adev/content/examples/built-in-directives:src/app/item-switch.component.ts",
        "//adev/content/examples/structural-directives:src/app/app.component.html",
        "//adev/src/assets/images:directives.svg",
    ],
    visibility = ["//adev:__subpackages__"],
)
