load("@npm//@angular/docs:index.bzl", "generate_guides")

generate_guides(
    name = "forms",
    srcs = glob([
        "*.md",
    ]),
    data = [
        "//adev/content/examples/dynamic-form:src/app/app.component.ts",
        "//adev/content/examples/dynamic-form:src/app/dynamic-form.component.html",
        "//adev/content/examples/dynamic-form:src/app/dynamic-form.component.ts",
        "//adev/content/examples/dynamic-form:src/app/dynamic-form-question.component.html",
        "//adev/content/examples/dynamic-form:src/app/dynamic-form-question.component.ts",
        "//adev/content/examples/dynamic-form:src/app/question.service.ts",
        "//adev/content/examples/dynamic-form:src/app/question-base.ts",
        "//adev/content/examples/dynamic-form:src/app/question-control.service.ts",
        "//adev/content/examples/dynamic-form:src/app/question-dropdown.ts",
        "//adev/content/examples/dynamic-form:src/app/question-textbox.ts",
        "//adev/content/examples/form-validation:src/app/reactive/actor-form-reactive.component.1.ts",
        "//adev/content/examples/form-validation:src/app/reactive/actor-form-reactive.component.2.ts",
        "//adev/content/examples/form-validation:src/app/reactive/actor-form-reactive.component.html",
        "//adev/content/examples/form-validation:src/app/shared/forbidden-name.directive.ts",
        "//adev/content/examples/form-validation:src/app/shared/role.directive.ts",
        "//adev/content/examples/form-validation:src/app/shared/unambiguous-role.directive.ts",
        "//adev/content/examples/form-validation:src/app/template/actor-form-template.component.html",
        "//adev/content/examples/form-validation:src/assets/forms.css",
        "//adev/content/examples/forms:src/app/actor.ts",
        "//adev/content/examples/forms:src/app/actor-form/actor-form.component.html",
        "//adev/content/examples/forms:src/app/actor-form/actor-form.component.ts",
        "//adev/content/examples/forms:src/app/app.component.html",
        "//adev/content/examples/forms:src/app/app.component.ts",
        "//adev/content/examples/forms:src/app/app.module.ts",
        "//adev/content/examples/forms:src/assets/forms.css",
        "//adev/content/examples/forms:src/index.html",
        "//adev/content/examples/forms:src/main.ts",
        "//adev/content/examples/forms:src/styles.1.css",
        "//adev/content/examples/forms-overview:src/app/reactive/favorite-color/favorite-color.component.spec.ts",
        "//adev/content/examples/forms-overview:src/app/reactive/favorite-color/favorite-color.component.ts",
        "//adev/content/examples/forms-overview:src/app/template/favorite-color/favorite-color.component.spec.ts",
        "//adev/content/examples/forms-overview:src/app/template/favorite-color/favorite-color.component.ts",
        "//adev/content/examples/reactive-forms:src/app/app.component.1.html",
        "//adev/content/examples/reactive-forms:src/app/app.module.ts",
        "//adev/content/examples/reactive-forms:src/app/name-editor/name-editor.component.html",
        "//adev/content/examples/reactive-forms:src/app/name-editor/name-editor.component.ts",
        "//adev/content/examples/reactive-forms:src/app/profile-editor/profile-editor.component.1.html",
        "//adev/content/examples/reactive-forms:src/app/profile-editor/profile-editor.component.1.ts",
        "//adev/content/examples/reactive-forms:src/app/profile-editor/profile-editor.component.2.ts",
        "//adev/content/examples/reactive-forms:src/app/profile-editor/profile-editor.component.html",
        "//adev/content/examples/reactive-forms:src/app/profile-editor/profile-editor.component.ts",
        "//adev/src/assets/images:overview.svg",
    ],
    visibility = ["//adev:__subpackages__"],
)
