load("@npm//@angular/docs:index.bzl", "generate_guides")

generate_guides(
    name = "routing",
    srcs = glob([
        "*.md",
    ]),
    data = [
        "//adev/content/examples/router:src/app/app.component.1.html",
        "//adev/content/examples/router:src/index.html",
        "//adev/content/examples/router-tutorial:src/app/app.component.css",
        "//adev/content/examples/router-tutorial:src/app/app.component.html",
        "//adev/content/examples/router-tutorial:src/app/crisis-list/crisis-list.component.html",
        "//adev/content/examples/router-tutorial:src/app/heroes-list/heroes-list.component.html",
        "//adev/content/examples/router-tutorial:src/app/page-not-found/page-not-found.component.html",
        "//adev/content/examples/routing-with-urlmatcher:src/app/app.component.html",
        "//adev/content/examples/routing-with-urlmatcher:src/app/app.routes.ts",
        "//adev/content/examples/routing-with-urlmatcher:src/app/profile/profile.component.html",
        "//adev/src/assets/images:routing.svg",
    ],
    visibility = ["//adev:__subpackages__"],
)
