load("@npm//@angular/docs:index.bzl", "generate_guides")

generate_guides(
    name = "configs",
    srcs = glob([
        "*.md",
    ]),
    data = [
        "//adev/content/examples/angular-compiler-options:tsconfig.app.json",
        "//adev/content/examples/angular-compiler-options:tsconfig.json",
    ],
    visibility = ["//adev:__subpackages__"],
)
