load("//tools:defaults2.bzl", "ts_project")

ts_project(
    name = "guides",
    srcs = glob(
        [
            "**/*.mts",
        ],
        exclude = ["index.mts"],
    ),
    visibility = [
        "//adev/shared-docs:__subpackages__",
    ],
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        "//:node_modules/@bazel/runfiles",
        "//:node_modules/@types/diff",
        "//:node_modules/@types/jsdom",
        "//:node_modules/@types/node",
        "//:node_modules/diff",
        "//:node_modules/emoji-regex",
        "//:node_modules/html-entities",
        "//:node_modules/jsdom",
        "//:node_modules/marked",
        "//:node_modules/mermaid",
        "//:node_modules/playwright-core",
        "//:node_modules/shiki",
    ],
)

ts_project(
    name = "index",
    srcs = [
        "index.mts",
    ],
    visibility = [
        "//adev/shared-docs:__subpackages__",
    ],
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        ":guides_rjs",
        "//:node_modules/@types/node",
    ],
)

exports_files([
    "index.mts",
])
