load("//tools:defaults2.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "lib",
    srcs = glob(
        [
            "*.mts",
        ],
        exclude = [
            "index.mts",
        ],
    ),
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        "//adev/shared-docs/interfaces:interfaces_rjs",
        "//:node_modules/@types/node",
        "//:node_modules/@webcontainer/api",
        "//:node_modules/tinyglobby",
    ],
)

ts_project(
    name = "navigation",
    srcs = [
        "index.mts",
    ],
    visibility = [
        "//adev/shared-docs:__subpackages__",
    ],
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        ":lib_rjs",
        "//adev/shared-docs/interfaces",
        "//:node_modules/@types/node",
    ],
)
