load("//tools:defaults2.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "editor",
    srcs = glob(
        [
            "*.mts",
        ],
        exclude = [
            "playground.mts",
            "tutorial.mts",
        ],
    ),
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        "//adev/shared-docs/interfaces:interfaces_rjs",
        "//:node_modules/@types/node",
        "//:node_modules/@webcontainer/api",
        "//:node_modules/tinyglobby",
    ],
)

ts_project(
    name = "playground",
    srcs = [
        "playground.mts",
    ],
    visibility = [
        "//adev/shared-docs:__subpackages__",
    ],
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        ":editor_rjs",
        "//adev/shared-docs/interfaces:interfaces_rjs",
        "//:node_modules/@types/node",
    ],
)

ts_project(
    name = "tutorials",
    srcs = [
        "tutorial.mts",
    ],
    visibility = [
        "//adev/shared-docs:__subpackages__",
    ],
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        ":editor_rjs",
        "//adev/shared-docs/interfaces:interfaces_rjs",
        "//:node_modules/@types/node",
    ],
)
