load("//tools:defaults2.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "index",
    srcs = [
        "index.mts",
    ],
    visibility = [
        "//adev/shared-docs:__subpackages__",
    ],
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/tinyglobby",
        "//:node_modules/typescript",
    ],
)

filegroup(
    name = "template",
    srcs = ["previews.template"],
    visibility = ["//visibility:public"],
)

exports_files([
    "index.mts",
    "previews.template",
])
