load("//tools:defaults2.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "zip",
    srcs = glob(
        [
            "*.mts",
        ],
        exclude = [
            "index.mts",
        ],
    ),
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        "//adev/shared-docs/interfaces:interfaces_rjs",
        "//adev/shared-docs/pipeline/examples/shared:shared_rjs",
        "//adev/shared-docs/pipeline/guides:guides_rjs",
        "//:node_modules/@types/node",
        "//:node_modules/fflate",
        "//:node_modules/tinyglobby",
    ],
)

ts_project(
    name = "index",
    srcs = [
        "index.mts",
    ],
    visibility = [
        "//adev/shared-docs:__subpackages__",
    ],
    tsconfig = "//adev/shared-docs:tsconfig_build",
    deps = [
        ":zip_rjs",
        "//:node_modules/@types/node",
    ],
)

exports_files([
    "index.mts",
])
