load("//tools:defaults.bzl", "jasmine_node_test")
load("//tools:defaults2.bzl", "ts_project")

ts_project(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "**/*.spec.mts",
    ]),
    tsconfig = "//adev/shared-docs:tsconfig_test",
    deps = [
        "//adev/shared-docs/pipeline/guides:guides_rjs",
        "//:node_modules/@bazel/runfiles",
        "//:node_modules/@types/jsdom",
        "//:node_modules/jsdom",
    ],
)

ts_project(
    name = "bootstrap",
    testonly = True,
    tsconfig = "//adev/shared-docs:tsconfig_test",
    srcs = [
        "bootstrap.init.mts",
    ],
)

jasmine_node_test(
    name = "unit_tests",
    bootstrap = [
        ":bootstrap",
    ],
    data = [
        "@npm//jsdom",
    ] + glob([
        "**/*.html",
        "**/*.md",
        "**/*.svg",
        "**/*.ts",
    ]),
    deps = [":unit_test_lib"],
)
