load("//tools:defaults.bzl", "jasmine_node_test")
load("//tools:defaults2.bzl", "ts_project")

package(default_visibility = ["//adev/shared-docs/pipeline/navigation:__subpackages__"])

ts_project(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob(["*.spec.mts"]),
    tsconfig = "//adev/shared-docs:tsconfig_test",
    deps = [
        "//adev/shared-docs/pipeline/navigation:lib_rjs",
        "//:node_modules/@types/node",
    ],
)

jasmine_node_test(
    name = "unit_tests",
    deps = [":unit_test_lib"],
)
