load("//adev/shared-docs/pipeline/api-gen/extraction:extract_api_to_json.bzl", "extract_api_to_json")
load("//tools:defaults.bzl", "jasmine_node_test")
load("//tools:defaults2.bzl", "ts_project")

package(default_visibility = ["//adev/shared-docs/pipeline/api-gen:__subpackages__"])

extract_api_to_json(
    name = "test",
    srcs = [
        "fake-source.mts",
        "//adev/shared-docs/pipeline/api-gen/extraction/test/dummy-entry-point:dummy_package",
    ],
    entry_point = "fake-source.mts",
    import_map = {
        "//adev/shared-docs/pipeline/api-gen/extraction/test/dummy-entry-point:index.mts": "@angular/dummy-package",
    },
    module_name = "@angular/core",
    output_name = "api.json",
    private_modules = [""],
)

extract_api_to_json(
    name = "test_with_extra_entries",
    srcs = [
        "fake-source.mts",
        "//adev/shared-docs/pipeline/api-gen/extraction/test/dummy-entry-point:dummy_package",
    ],
    entry_point = "fake-source.mts",
    extra_entries = [
        "extra.json",
    ],
    import_map = {
        "//adev/shared-docs/pipeline/api-gen/extraction/test/dummy-entry-point:index.mts": "@angular/dummy-package",
    },
    module_name = "@angular/core",
    output_name = "extra_api.json",
    private_modules = [""],
)

filegroup(
    name = "source_files",
    srcs = ["fake-source.mts"],
)

ts_project(
    name = "unit_test_lib",
    testonly = True,
    srcs =
        glob(["*.spec.mts"]) + [
            "fake-examples.mts",
        ],
    tsconfig = "//adev/shared-docs:tsconfig_test",
    deps = [
        "//adev/shared-docs/pipeline/api-gen/extraction:extract_api_to_json_lib_rjs",
        "//:node_modules/@types/node",
    ],
    interop_deps = [
        "@angular//packages/compiler-cli",
    ],
)

jasmine_node_test(
    name = "unit_tests",
    deps = [":unit_test_lib"],
)
