load("//adev/shared-docs/pipeline/api-gen/rendering:render_api_to_html.bzl", "render_api_to_html")
load("//tools:defaults2.bzl", "ts_project", "jasmine_test")

render_api_to_html(
    name = "test",
    srcs = [
        "fake-cli-entries.json",
        "fake-entries.json",
    ],
)

ts_project(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob(
        [
            "**/*.spec.mts",
        ],
    ),
    tsconfig = "//adev/shared-docs:tsconfig_test",
    deps = [
        "//adev/shared-docs/pipeline/api-gen/rendering:render_api_to_html_lib_rjs",
        "//:node_modules/@bazel/runfiles",
        "//:node_modules/@types/jsdom",
        "//:node_modules/jsdom",
    ],
)

jasmine_test(
    name = "unit_tests",
    data = [
        ":unit_test_lib_rjs",
        "//:node_modules/jsdom",
    ] + glob([
        "**/*.json",
    ]),
)
